--- a/style.css
+++ b/style.css
@@ -99,6 +99,40 @@ header{
 .plan-box{
     text-align: center;
 }
+.plan-box h1{
+    color: #151414;
+}
+.plan-box p{
+    color: #444343;
+}
 .plan-box img{
     width: 70px;
+}
+.call-container{
+    padding: 80px 150px;
+}
+.call-img{
+ background-image: url(images/watch.png), linear-gradient(90deg, #F15B22 0%, rgba(241, 91, 34, 0.00) 100%);
+ background-blend-mode:overlay;
+ background-size: cover;
+ background-repeat: no-repeat;
+ height: 300px;
+ width: 100%;
+ display: flex;
+ align-items: center;
+}
+.call-content{
+    margin-left: 10px;
+    padding: 40px;
+}
+.call-content h1{
+    color: #fff;
+    font-size: 35px;
+}
+.call-content .btn{
+    margin-top: 20px;
+    font-size: 14px;
+    background-color: #fff;
+    color: #F15B22;
+    font-weight: bold;
 }
